# hole-pad-calc

./: .gitignore  README.md  pyproject.toml
src/hole_pad_calc/: __init__.py  measurement.py  rect_calc.py  unit.py
tests/: test_measurement.py  test_rect_calc.py  test_unit.py
